--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -10,9 +10,9 @@
     <title>Elgiro</title>
   </head>
   <body>
-    <nav>
+    <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container container-fluid">
           <a class="navbar-brand" href="../index.html">Inicio</a>
           <button
             class="navbar-toggler"
@@ -31,67 +31,70 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="../pages/contacto.html"
-                  >Contacto</a
+                  href="./ilgiro.html"
+                  >Giro de Italia</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/lavuelta.html">La Vuelta</a>
+                <a class="nav-link" href="./lavuelta.html">La Vuelta</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/tourthefrance.html"
-                  >Tour the France</a
+                <a class="nav-link" href="./tourthefrance.html"
+                  >Tour de France</a
                 >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    </nav>
-    <header>
-      <h1>Grandes Vueltas del Ciclismo</h1>
     </header>
+
     <main>
-      <h1>GIRO DE ITALIA</h1>
-      <p>
-        El Giro de Italia es una competición ciclista por etapas de tres semanas
-        de duración, disputada en el mes de mayo en Italia con un recorrido
-        diferente cada año. En ocasiones también se disputa alguna etapa en los
-        países colindantes. Es una de las tres Grandes Vueltas, la segunda en
-        aparecer históricamente. Dejó de formar parte del UCI ProTour, como las
-        otras dos grandes vueltas, para posteriormente integrarse en el UCI
-        World Ranking y UCI WorldTour. El primer Giro de Italia comenzó el 13 de
-        mayo de 1909 en Milán con un total de 8 etapas y 2448 kilómetros.
-      </p>
-      <h2>Primera Edicion</h2>
-      <p>
-        Con la participación de 127 corredores, el 13 de mayo de 1909 a las 2:53
-        a. m. se largó la primera edición en la plaza de Loreto en Milán rumbo a
-        Bolonia. Fueron 8 etapas para un total de 2.448 kilómetros, corriéndose
-        una etapa cada dos o tres días, ya que La Gazzetta dello Sport era una
-        publicación trisemanal. El reglamento utilizado fue el mismo que se
-        usaba en el Tour de Francia, con una clasificación por puntos según el
-        orden de llegada en las etapas y no una clasificación por tiempos.
-        Cuarenta y nueve ciclistas lograron completar el recorrido y el ganador
-        de esa primera edición fue Luigi Ganna que sumó 27 puntos. Su gran rival
-        Giovanni Rossignoli, finalizó tercero con 40 puntos, pero si se hubiera
-        tomado en cuenta los tiempos, Rossignoli habría ganado por más de 37
-        minutos.
-      </p>
-      <h2>Camiseta de Lideres</h2>
-      <p>
-        El líder de la clasificación general se distingue por llevar una maglia
-        rosa (maillot del color del diario deportivo milanés La Gazzetta dello
-        Sport que organiza la carrera), el líder de la clasificación de la
-        montaña, desde 2012 lleva la maglia azul, (anteriormente fue la maglia
-        verde). El líder de la clasificación por puntos o de la regularidad
-        lucía la maglia rosso passione o rossa (actualmente es ciclamino) y el
-        líder de la clasificación para menores de 25 años lleva la maglia
-        blanca. En el Giro 100, no se usa la maglia roja, fue sustituida por la
-        original maglia ciclamino.
-      </p>
-      <section>
-        <div class="conteiner">
+      <div class="container">
+        <h1>Grandes Vueltas del Ciclismo</h1>
+        <h2>GIRO DE ITALIA</h2>
+        <p>
+          El Giro de Italia es una competición ciclista por etapas de tres
+          semanas de duración, disputada en el mes de mayo en Italia con un
+          recorrido diferente cada año. En ocasiones también se disputa alguna
+          etapa en los países colindantes. Es una de las tres Grandes Vueltas,
+          la segunda en aparecer históricamente. Dejó de formar parte del UCI
+          ProTour, como las otras dos grandes vueltas, para posteriormente
+          integrarse en el UCI World Ranking y UCI WorldTour. El primer Giro de
+          Italia comenzó el 13 de mayo de 1909 en Milán con un total de 8 etapas
+          y 2448 kilómetros.
+        </p>
+        <h2>Primera Edicion</h2>
+        <p>
+          Con la participación de 127 corredores, el 13 de mayo de 1909 a las
+          2:53 a. m. se largó la primera edición en la plaza de Loreto en Milán
+          rumbo a Bolonia. Fueron 8 etapas para un total de 2.448 kilómetros,
+          corriéndose una etapa cada dos o tres días, ya que La Gazzetta dello
+          Sport era una publicación trisemanal. El reglamento utilizado fue el
+          mismo que se usaba en el Tour de Francia, con una clasificación por
+          puntos según el orden de llegada en las etapas y no una clasificación
+          por tiempos. Cuarenta y nueve ciclistas lograron completar el
+          recorrido y el ganador de esa primera edición fue Luigi Ganna que sumó
+          27 puntos. Su gran rival Giovanni Rossignoli, finalizó tercero con 40
+          puntos, pero si se hubiera tomado en cuenta los tiempos, Rossignoli
+          habría ganado por más de 37 minutos.
+        </p>
+        <h2>Camiseta de Lideres</h2>
+        <p>
+          El líder de la clasificación general se distingue por llevar una
+          maglia rosa (maillot del color del diario deportivo milanés La
+          Gazzetta dello Sport que organiza la carrera), el líder de la
+          clasificación de la montaña, desde 2012 lleva la maglia azul,
+          (anteriormente fue la maglia verde). El líder de la clasificación por
+          puntos o de la regularidad lucía la maglia rosso passione o rossa
+          (actualmente es ciclamino) y el líder de la clasificación para menores
+          de 25 años lleva la maglia blanca. En el Giro 100, no se usa la maglia
+          roja, fue sustituida por la original maglia ciclamino.
+        </p>
+        <section>
           <div class="row">
             <div
               class="col-xs-8 offset-xs-2 col-sm-8 offset-sm-2 col-md-4 offset-md-4 col-lg-4 offset-lg-4"
@@ -150,14 +153,16 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
     <footer>
-      <div class="redes">
-        <img src="../images/facebook.png" />
-        <img src="../images/gorjeo.png" />
-        <img src="../images/instagram.png" />
+      <div class="container">
+        <div class="redes">
+          <img src="../images/facebook.png" />
+          <img src="../images/gorjeo.png" />
+          <img src="../images/instagram.png" />
+        </div>
       </div>
     </footer>
   </body>
