--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -10,9 +10,9 @@
     <title>La Vuelta</title>
   </head>
   <body>
-    <nav>
+    <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container container-fluid">
           <a class="navbar-brand" href="../index.html">Inicio</a>
           <button
             class="navbar-toggler"
@@ -31,75 +31,79 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="../pages/contacto.html"
-                  >Contacto</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/ilgiro.html"
+                  href="./ilgiro.html"
                   >Giro de Italia</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/tourthefrance.html"
-                  >Tour the France</a
+                <a class="nav-link" href="./lavuelta.html">La Vuelta</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./tourthefrance.html"
+                  >Tour de France</a
                 >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    </nav>
-    <header>
-      <h1>Grandes Vueltas del Ciclismo</h1>
     </header>
     <main>
-      <h1>La Vuelta de España</h1>
-      <p>
-        La Vuelta Ciclista a España, también conocida como la Vuelta a España o
-        simplemente La Vuelta, es una carrera por etapas profesional de ciclismo
-        en ruta masculino disputada a lo largo de la geografía española, entre
-        finales de agosto y mediados de septiembre. Es una de las tres Grandes
-        Vueltas y pertenece al calendario UCI WorldTour.
-      </p>
-      <h2>La primera edicion</h2>
-      <p>
-        La Vuelta se disputó por primera vez en 1935. Desde su creación, la
-        carrera ha sido suspendida en cuatro ocasiones: desde 1937 hasta 1940
-        debido a la guerra civil española, desde 1943 hasta 1944 debido a la
-        Segunda Guerra Mundial y a la mala situación económica de España, en
-        1949 y desde 1951 hasta 1954
-      </p>
-      <h2>Camiseta de lideres</h2>
-      <p>
-        Los líderes de las distintas clasificaciones suplementarias también
-        llevan maillots identificativos desde 1950 (con anterioridad, aún
-        existiendo una clasificación de la montaña oficial, no se distinguía al
-        líder de la misma). El color azul estuvo durante bastante tiempo
-        asociado al líder de la clasificación por puntos y el color verde al
-        líder de la clasificación de la montaña (en algunas ediciones su
-        coloración fue roja o granate). El color rojo se asoció durante
-        bastantes años al liderato en la clasificación de las metas volantes.
-        Otras clasificaciones que han existido durante la disputa de la ronda
-        española, como los sprints especiales o la combinada, tuvieron
-        diferentes maillots dependiendo de la edición. Desde 1994 y hasta el
-        2009 (ambos inclusive), el maillot de la regularidad (o por puntos) pasó
-        a tener una tonalidad granate, mientras que el maillot de la montaña,
-        pasó a ser blanco.
-      </p>
+      <div class="container">
+        <h1>La Vuelta de España</h1>
+        <p>
+          La Vuelta Ciclista a España, también conocida como la Vuelta a España
+          o simplemente La Vuelta, es una carrera por etapas profesional de
+          ciclismo en ruta masculino disputada a lo largo de la geografía
+          española, entre finales de agosto y mediados de septiembre. Es una de
+          las tres Grandes Vueltas y pertenece al calendario UCI WorldTour.
+        </p>
+        <h2>La primera edicion</h2>
+        <p>
+          La Vuelta se disputó por primera vez en 1935. Desde su creación, la
+          carrera ha sido suspendida en cuatro ocasiones: desde 1937 hasta 1940
+          debido a la guerra civil española, desde 1943 hasta 1944 debido a la
+          Segunda Guerra Mundial y a la mala situación económica de España, en
+          1949 y desde 1951 hasta 1954
+        </p>
+        <h2>Camiseta de lideres</h2>
+        <p>
+          Los líderes de las distintas clasificaciones suplementarias también
+          llevan maillots identificativos desde 1950 (con anterioridad, aún
+          existiendo una clasificación de la montaña oficial, no se distinguía
+          al líder de la misma). El color azul estuvo durante bastante tiempo
+          asociado al líder de la clasificación por puntos y el color verde al
+          líder de la clasificación de la montaña (en algunas ediciones su
+          coloración fue roja o granate). El color rojo se asoció durante
+          bastantes años al liderato en la clasificación de las metas volantes.
+          Otras clasificaciones que han existido durante la disputa de la ronda
+          española, como los sprints especiales o la combinada, tuvieron
+          diferentes maillots dependiendo de la edición. Desde 1994 y hasta el
+          2009 (ambos inclusive), el maillot de la regularidad (o por puntos)
+          pasó a tener una tonalidad granate, mientras que el maillot de la
+          montaña, pasó a ser blanco.
+        </p>
+      </div>
     </main>
     <section>
-      <div class="logos">
-        <img src="../images/vueltalider.jpg" />
-        <img src="../images/vueltaespañavelocista.jpg" />
-        <img src="../images/vueltalidermontaña.jpg" />
+      <div class="container">
+        <div class="logos">
+          <img src="../images/vueltalider.jpg" />
+          <img src="../images/vueltaespañavelocista.jpg" />
+          <img src="../images/vueltalidermontaña.jpg" />
+        </div>
       </div>
     </section>
     <footer>
-      <div class="redes">
-        <img src="../images/facebook.png" />
-        <img src="../images/gorjeo.png" />
-        <img src="../images/instagram.png" />
+      <div class="container">
+        <div class="redes">
+          <img src="../images/facebook.png" />
+          <img src="../images/gorjeo.png" />
+          <img src="../images/instagram.png" />
+        </div>
       </div>
     </footer>
   </body>
