agregue sass a mi proyecto

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa"
+    />
+    <meta
+      name="keywords"
+      content="ciclismo, giro, italia, tour, francia, vuelta, españa"
+    />
+    <meta name="author" content="Lean" />
+
     <meta http-equiv="X-Us-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <script src="../js/bootstrap.min.js"></script>
-    <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./css/scss/estiloss.css" rel="stylesheet" type="text/css" />
     <title>Ciclismo</title>
   </head>
   <body>
