--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-Us-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <link href="./css/scss/estiloss.css" rel="stylesheet" type="text/css" />
     <title>Ciclismo</title>
   </head>
