agregando info al index

--- a/index.html
+++ b/index.html
@@ -148,6 +148,60 @@
           </li>
         </ul>
       </div>
+      <div class="container">
+        <h4>La Bicicleta</h4>
+        <p>
+          Si bien hay cierta evidencia discutible sobre la existencia de
+          bicicletas antes de 1800, es un hecho ampliamente aceptado que la
+          primera bicicleta la inventó en 1817 un hombre llamado Barón Karl Von
+          Drais en Alemania. Denominada Laufmaschine, que en alemán significa
+          "máquina andante", fue patentada en 1818 como el primer transporte
+          dirigible de dos ruedas propulsado por un humano. Otros inventores
+          pronto recogieron el concepto, como Denis Johnson, de Londres, que
+          creó una versión más nueva y mejorada de la máquina andante original.
+          Tallada en madera casi en su totalidad, y con una rueda delantera
+          orientable, fue diseñada para reducir el tiempo de viaje a la mitad.
+          Esta invención de dos ruedas no disponía de pedales, y los usuarios
+          debían impulsar de una manera muy precaria su "caballo de juguete"
+          hacia adelante con los pies y deslizarse cuesta abajo, mientras
+          intentaban guardar el equilibrio. Fue apodada "caballo de juguete",
+          como el clásico caballito balancín, y oficialmente denominado
+          velocípedo.
+        </p>
+        <h5>El boom de la bicicleta</h5>
+        <p>
+          Entre la decada de 1960 y 1970, fue uno de los momentos decisivos de
+          nuestra historia reciente, un tiempo de esperanza, promesa, y libertad
+          de expresión en moda, arte y música, respaldada por una generación sin
+          miedo a transgredir. La liberación de la mujer había recorrido un
+          largo camino desde la época victoriana. Fue una década de cambio que
+          también dejó una impresión duradera en la evolución de la bicicleta, y
+          el período entre mediados de los años 1960 y 1975 EE.UU. vivió uno de
+          los mayores picos de popularidad de la bicicleta desde su invención.
+          Empezó a cobrar popularidad como el "boom de la bicicleta". Con una
+          mayor conciencia de mantenerse en forma, las ventas de bicicletas se
+          duplicaron entre 1960 y 1970, y volvieron a duplicarse entre 1971 y
+          1975. Este fue el momento en que nació la BMX, cuyo diseño se inspiró
+          en los campeones de motocross y cuya popularidad se extendió por toda
+          la cultura popular. Su aparición en clásicos de culto como ET, Karate
+          Kid y BMX Bandits, junto al estilo libre BMXing, arraigó aún más su
+          popularidad entre los jóvenes. A principios de 1980 se fabricó la
+          primera bicicleta de montaña oficial fabricada en masa. Estas
+          bicicletas fueron diseñadas para el ciclismo todoterreno y utilizadas
+          principalmente para actividades como el freewheeling o marcha a la
+          deriva por senderos de montaña, caminos no asfaltados, a campo
+          traviesa, terreno áspero y equiturismo. Cuando se fabricaron por
+          primera vez, estas bicicletas podían ser tan demoledoras para los
+          huesos como los originales "cacharros", debido a su falta de
+          suspensión y el uso de materiales pesados. Durante la década de 1980,
+          los fabricantes de bicicletas comenzaron a integrar materiales ligeros
+          de alta tecnología como el aluminio, amortiguadores y horquillas de
+          suspensión en las bicicletas de montaña. Los neumáticos típicos de las
+          bicicletas de montaña son anchos y ranurados para lograr mayor
+          estabilidad y equilibrio y que el ciclista tenga una buena adherencia
+          al suelo.
+        </p>
+      </div>
     </article>
     <footer>
       <div class="container">
