sacando la clase active

--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="./pages/ilgiro.html"
+                <a class="nav-link" href="./pages/ilgiro.html"
                   >Giro de Italia</a
                 >
               </li>
