--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -28,12 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="./ilgiro.html"
-                  >Giro de Italia</a
-                >
+                <a class="nav-link" href="./ilgiro.html">Giro de Italia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./lavuelta.html">La Vuelta</a>
