modifamos algunos puntos notificados

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <script src="../js/bootstrap.min.js"></script>
-    <link href="../css/scss/estiloss.css" rel="stylesheet" type="text/css" />
+    <link href="../css/scss/estilos.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Contacto</title>
   </head>
   <body>
@@ -48,8 +52,10 @@
     </header>
 
     <main>
-      <div class="container">
-        <h1>Grandes Vueltas del Ciclismo</h1>
+      <section class="container">
+        <h1 class="animate__animated animate__fadeInDown">
+          Grandes Vueltas del Ciclismo
+        </h1>
         <form>
           <div class="row">
             <div class="col-xs-12 col-sm-8 offset-sm-2">
@@ -86,7 +92,7 @@
             </div>
           </div>
         </form>
-      </div>
+      </section>
     </main>
 
     <footer>
