--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <script src="../js/bootstrap.min.js"></script>
-    <link href="../css/scss/estiloss.css" rel="stylesheet" type="text/css" />
+    <link href="../css/scss/estilos.css" rel="stylesheet" type="text/css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>La Vuelta</title>
   </head>
   <body>
@@ -47,8 +52,11 @@
       </nav>
     </header>
     <main>
-      <div class="container">
-        <h1>La Vuelta de España</h1>
+      <section class="container">
+        <h1 class="animate__animated animate__fadeInDown">
+          Grandes Vueltas del Ciclismo
+        </h1>
+        <h2>La Vuelta</h2>
         <p>
           La Vuelta Ciclista a España, también conocida como la Vuelta a España
           o simplemente La Vuelta, es una carrera por etapas profesional de
@@ -81,14 +89,14 @@
           pasó a tener una tonalidad granate, mientras que el maillot de la
           montaña, pasó a ser blanco.
         </p>
-      </div>
+      </section>
     </main>
     <section>
       <div class="container">
         <div class="logos">
-          <img src="../images/vueltalider.jpg" />
-          <img src="../images/vueltaespañavelocista.jpg" />
-          <img src="../images/vueltalidermontaña.jpg" />
+          <img class="imagen-index" src="../images/vueltalider.jpg" />
+          <img class="imagen-index" src="../images/vueltaespañavelocista.jpg" />
+          <img class="imagen-index" src="../images/vueltalidermontaña.jpg" />
         </div>
       </div>
     </section>
