--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <script src="../js/bootstrap.min.js"></script>
-    <link href="../css/scss/estiloss.css" rel="stylesheet" type="text/css" />
+    <link href="../css/scss/estilos.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>El Tour de France</title>
   </head>
   <body>
@@ -47,8 +51,12 @@
       </nav>
     </header>
     <main>
-      <div class="container">
-        <h1>El Tour de Francia</h1>
+      <section class="container">
+        <h1 class="animate__animated animate__fadeInDown">
+          Grandes Vueltas del Ciclismo
+        </h1>
+        <h2>Tour de Francia</h2>
+
         <p>
           El Tour de Francia, también conocido simplemente como el Tour, es una
           vuelta por etapas profesional de ciclismo en ruta disputada a lo largo
@@ -89,15 +97,15 @@
           ciclista menor de 26 años mejor ubicado en la clasificación general,
           en la denominada clasificación de los jóvenes.
         </p>
-      </div>
+      </section>
     </main>
     <section>
       <div class="container">
         <div class="logos">
-          <img src="../images/lidertour.jpg" />
-          <img src="../images/lidermontañatour.jpg" />
-          <img src="../images/mejorjoven.jpg" />
-          <img src="../images/lidersprint.jpg" />
+          <img class="imagen-index" src="../images/lidertour.jpg" />
+          <img class="imagen-index" src="../images/lidermontañatour.jpg" />
+
+          <img class="imagen-index" src="../images/lidersprint.jpg" />
         </div>
       </div>
     </section>
