--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <script src="./js/bootstrap.min.js"></script>
-    <link href="./css/scss/estiloss.css" rel="stylesheet" type="text/css" />
-    <title>Ciclismo</title>
+    <link href="./css/scss/estilos.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Ciclismo XXI</title>
   </head>
   <body>
     <header>
@@ -59,8 +63,10 @@
       </nav>
     </header>
     <main>
-      <div class="container">
-        <h1>LAS GRANDES VUELTAS</h1>
+      <section class="container">
+        <h1 class="animate__animated animate__fadeInDown">
+          Grandes Vueltas del Ciclismo
+        </h1>
         <section class="carrera">
           <div class="contenedor">
             <div></div>
@@ -96,7 +102,7 @@
             </div>
           </div>
         </section>
-      </div>
+      </section>
     </main>
     <article>
       <div class="container">
