--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <script src="../js/bootstrap.min.js"></script>
-    <link href="../css/scss/estiloss.css" rel="stylesheet" type="text/css" />
+    <link href="../css/scss/estilos.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Elgiro</title>
   </head>
   <body>
@@ -48,8 +52,10 @@
     </header>
 
     <main>
-      <div class="container">
-        <h1>Grandes Vueltas del Ciclismo</h1>
+      <section class="container">
+        <h1 class="animate__animated animate__fadeInDown">
+          Grandes Vueltas del Ciclismo
+        </h1>
         <h2>GIRO DE ITALIA</h2>
         <p>
           El Giro de Italia es una competición ciclista por etapas de tres
@@ -149,7 +155,7 @@
             </div>
           </div>
         </section>
-      </div>
+      </section>
     </main>
     <footer>
       <div class="container">
