--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa"
+    />
+    <meta
+      name="keywords"
+      content="ciclismo, giro, italia, tour, francia, vuelta, españa"
+    />
+    <meta name="author" content="Lean" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
