--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="./ilgiro.html">Giro de Italia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./lavuelta.html">La Vuelta</a>
+                <a class="nav-link active" href="./lavuelta.html">La Vuelta</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./tourthefrance.html"
