--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="./lavuelta.html">La Vuelta</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./tourthefrance.html"
+                <a class="nav-link active" href="./tourthefrance.html"
                   >Tour de France</a
                 >
               </li>
