--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container container-fluid">
-          <a class="navbar-brand" href="./index.html">Inicio</a>
+          <a class="navbar-brand active" href="./index.html">Inicio</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -65,7 +65,7 @@
     <main>
       <section class="container">
         <h1 class="animate__animated animate__fadeInDown">
-          Grandes Vueltas del Ciclismo 
+          Grandes Vueltas del Ciclismo
         </h1>
         <section class="carrera">
           <div class="contenedor">
