--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
+                <a class="nav-link active" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
