--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -41,7 +41,9 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./ilgiro.html">Giro de Italia</a>
+                <a class="nav-link active" href="./ilgiro.html"
+                  >Giro de Italia</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./lavuelta.html">La Vuelta</a>
